--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,17 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 </head>
 <body>
-  <app-root>Загрузка!<div class="loader"></div></app-root>
+  <app-root>
+
+  	<div class="loader" style="display: flex">
+  		<div class="container-spanner">
+    		<svg viewBox="0 0 100 100">
+      			<circle cx="50%" cy="50%" r="45"></circle>
+    		</svg>
+  		</div>
+	</div>
+
+	</app-root>
+
 </body>
 </html>
