--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <app-root>
-
+<!-- test -->test
   	<div class="loader" style="display: flex">
   		<div class="container-spanner">
     		<svg viewBox="0 0 100 100">
